header, footer and section integration

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,40 @@
-<p>footer works!</p>
+<footer class="site-footer">
+    <div class="content">
+          <div class="title">A propos</div>
+          <p class="text-justify">Joobi est une initiative pour aider tout porteur de projets a soumettre leurs projets pour trouver des profesionnels(entreprises ou freelances) pour la realisation.</p>
+
+          <div class="title">Categories</div>
+          <ul class="footer-links">
+            <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
+            <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
+            <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
+            <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
+            <li><a href="http://scanfcode.com/category/android/">Android</a></li>
+            <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
+          </ul>
+
+          <div class="title">Liens</div>
+          <ul class="footer-links">
+            <li>
+              <img src="../../assets/icons/about.png" alt="A propos de nous">
+              <a href="#">A propos de nous</a>
+            </li>
+            <li>
+              <img src="../../assets/icons/gmail.png" alt="Nous contacter">
+              <a href="#">Nous contacter</a>
+            </li>
+            <li>
+              <img src="../../assets/icons/shield.png" alt="">
+              <a href="#">Politique de confidentialité</a>
+            </li>
+          </ul>
+      <hr>
+      <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by 
+        <a href="#">Mady Camara</a>.
+      </p>
+           <ul class="social-icons">
+            <li><a href="#"><img src="../../assets/img/app-store.svg" alt="app strore"></a></li> 
+            <li><a href="#"><img src="../../assets/img/google-play.png" alt="google play"></a></li>  
+          </ul>
+    </div>
+</footer>
