--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<nav>
+<div id="header">
+    <img src="../../assets/img/logo.png" alt="logo" class="logo">
+    <div class="size">Joobi</div>
+        <a>
+            <div class="menu">
+                <img src="../../assets/img/menu.png" alt="menu">
+                <img src="../../assets/img/login-icon.png" alt="login">
+            </div>
+        </a>
+</div>
+</nav>
+<app-section></app-section>
