finish home grid

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -14,7 +14,7 @@
   width: auto;
   height: 2rem;
   border-radius: 13px;
-  border: 1px solid #000000;
+  border: 1px solid #FFFFFF;
   margin-left: 15px;
   cursor: pointer;
  }
@@ -23,7 +23,7 @@
   width: auto;
   height: 2rem;
   border-radius: 13px;
-  border: 1px solid #000000;
+  border: 1px solid #FFFFFF;
   background-color: white;
   margin-right: 15px;
   cursor: pointer;
