--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav>
 <div id="header">
-    <img src="../../assets/img/logo.png" alt="logo" class="logo">
+    <img src="../../assets/img/joobi.svg" alt="logo" class="logo">
     <div class="size">Joobi</div>
         <a>
             <div class="menu">
