--- a/src/app/home-content/home-content.component.css
+++ b/src/app/home-content/home-content.component.css
@@ -26,13 +26,15 @@ button {
 
 .cover {
     font-size: 15px;
-    width: auto;
-    max-width: max-content;
     padding: 5px;
+    max-width: max-content;
     background-color: #ffffff;
     border-radius: 5px;
     box-shadow: 0 5px 20px #6a99ec, 0 0 0 8px #ffffffeb;
     margin: 10px auto 25px auto;
+    align-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .tb
@@ -52,62 +54,6 @@ img {
     border-radius: 8px 0 0 8px;
   }
   
-  .details {
-    max-width: max-content;
-    height: auto;
-    background: #fff;
-    border-radius: 8px;
-    flex-direction: column;
-    margin-bottom: 15px;
-  }
-  .details__item {
-    display: flex;
-    width: auto;
-    max-height: max-content;
-  }
-  .item__image {
-    display: flex;
-    justify-content: center;
-  }
-  .item__image .catgor {
-    margin-top: -15px;
-    margin-left: -15px;
-    height: 4rem;
-    width: auto;
-    padding: 5px;
-    border-radius: 10px;
-  }
-  .item__details {
-    padding: 15px 15px 5px 15px;
-  }
-  .item__title {
-    font-size: 18px;
-    font-weight: 400;
-    color: #4b88f1;
-  }
-  .item__price {
-    font-size: 13px;
-    color: #767779;
-  }
-  .item__description {
-    font-size: 14px;
-    color: #767779;
-    margin-top: 10px;
-  }
-  .green {
-    color: #00c700fd;
-    font-size: 12px;
-  }
-  .red {
-    color: #ff0000;
-    font-size: 12px;
-  }
-  .date{
-    font-size: 10px;
-    color: #767779;
-    margin-top: 10px;
-    margin-bottom: 0px;
-  }
   .grid-container {
     display: grid;
     grid-template-columns: 222px auto;
@@ -139,4 +85,25 @@ img {
   }
   a:hover {
     color: #4b88f1;
+  }
+
+  @media screen and (max-width: 700px) {
+    .grid-container{
+      flex-direction: column;
+      display: flex;
+    }
+    ul{
+      grid-template-columns: auto auto;
+    }
+  }
+
+  @media screen and (max-width: 540px) {
+    .cover{
+      max-width: 213px;
+    }
+  }
+  .col2{
+    margin: 0px;
+    padding: 0px;
+    display: inline-block;
   }
