--- a/src/app/section/section.component.css
+++ b/src/app/section/section.component.css
@@ -2,7 +2,6 @@
     max-width: 660px;
     margin: 0 auto;
     padding: 0 20px;
-    margin-bottom: 100px;
   }
   
   .hero {
@@ -20,6 +19,7 @@
     color: rgb(255, 255, 255);
     font-size: 5vh;
     line-height: 1.5;
+    margin: 0;
   }
   
   .home-button {
