--- a/src/app/home-content/project/project.component.css
+++ b/src/app/home-content/project/project.component.css
@@ -24,7 +24,7 @@
     border-radius: 10px;
   }
   .item__details {
-    padding: 15px 15px 5px 15px;
+    padding: 15px 15px 5px 5px;
   }
   .item__title {
     font-size: 18px;
@@ -40,12 +40,7 @@
     color: #767779;
     margin-top: 10px;
   }
-  .green {
-    color: #00c700fd;
-    font-size: 12px;
-  }
-  .red {
-    color: #ff0000;
+  .span {
     font-size: 12px;
   }
   .date{
